@@ -4,6 +4,9 @@
 	  warnings list from - added
 	* doc/sdccman.lyx: removed the note
 	  "For list of warnings and corresponding codes, see err_warn.txt"
+	* src/SDCCsymt.c: fixed bug #1699804:
+	  Bug with some uses of sizeof(static local array) (MCS51)
+	* support/regression/tests/test-1699804.c: added
 
 2007-04-20 Maarten Brock <sourceforge.brock AT dse.nl>
 
